# surrealdb-tests

./: .gitignore
surrealdb-chatbot-rag/: .env-example  README.md  pyproject.toml
surrealdb-chatbot-rag/src/: app.py  streamlit-quick-tests.py  test.py
